# srs_compile_commands_generator

./: Cargo.toml
src/: main.rs
