[package]
name = "rs_compile_commands_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5"
toml = { version = "0.8.20", features = [ "parse" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
regex = "1.11.1"
static_str_ops = "0.1.2"